Переработана шапка сайта, улучшен внешний вид

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -23,7 +23,7 @@ html {
 
 body {
     @apply bg-neutral-100;
-    font-family: 'RootUI', serif;
+    font-family: 'Montserrat', serif;
     font-weight: 400;
 
 
@@ -36,7 +36,7 @@ body {
     --color-primary-200: #0d1323ff;
     --color-primary-300: #0e1527ff;
     --color-primary-400: #0f172bff;
-    --color-primary-500: #1e2538ff;
+    --color-primary-500: #FF4040;
     --color-primary-600: #2c3345ff;
     --color-primary-700: #484f5fff;
     --color-primary-800: #808692ff;
