Добавлен основной компонент для всех блоков сайта, для правильной и настраиваемой отрисовки

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -24,7 +24,7 @@ body {
     --color-primary-200: #0d1323ff;
     --color-primary-300: #0e1527ff;
     --color-primary-400: #0f172bff;
-    --color-primary-500: #FF4040;
+    --color-primary-500: #25cae9;
     --color-primary-600: #2c3345ff;
     --color-primary-700: #484f5fff;
     --color-primary-800: #808692ff;
