--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -9,21 +9,20 @@
 
 html {
     @apply bg-neutral-400;
+    scroll-behavior: smooth;
 }
 
 body {
     @apply bg-neutral-100;
     font-family: 'Montserrat', serif;
     font-weight: 400;
-    
-    a:hover {
-        text-decoration: underline;
+
+    .ck-content a {
+        @apply text-primary-600 font-bold hover:underline;
     }
-    
 }
 
 :root {
-    /*--ui-text-muted: white;*/
     --color-primary-50: #1d9fb7;
     --color-primary-100: #06434f;
     --color-primary-200: #9be7f5;
