--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -37,14 +37,14 @@ body {
 
 
     h1 {
-        @apply font-bold text-3xl mb-2;
+        @apply font-bold text-3xl md:text-4xl mb-2;
     }
 
     h2 {
-        @apply font-bold text-2xl mb-2;
+        @apply font-bold text-2xl md:text-3xl mb-2;
     }
 
     h3 {
-        @apply font-bold text-xl mb-2;
+        @apply font-bold text-xl md:text-2xl mb-2;
     }
 }
