--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -98,7 +98,7 @@ body {
     --color-primary-200: #9be7f5;
     --color-primary-300: #73ddf1;
     --color-primary-400: #4cd4ed;
-    --color-primary-500: #25cae9;
+    --color-primary-500: #ff9000;
     --color-primary-600: #1d9fb7;
     --color-primary-700: #157486;
     --color-primary-800: #0d4954;
