--- a/app/assets/css/theme.css
+++ b/app/assets/css/theme.css
@@ -14,7 +14,7 @@
     --color-primary-300: #73ddf1;
     --color-primary-400: #4cd4ed;
     --color-primary-500: #7592dc;
-    --color-primary-600: #b87618;
+    --color-primary-600: #7592dc;
     --color-primary-700: #157486;
     --color-primary-800: #0d4954;
     --color-primary-900: #061e23;
