--- a/app/assets/css/theme.css
+++ b/app/assets/css/theme.css
@@ -1,24 +1,21 @@
 @import 'tailwindcss';
 @import '@nuxt/ui';
 
+
 @theme {
-  --breakpoint-xs: 30rem;
-  --breakpoint-2xl: 100rem;
-  --breakpoint-3xl: 110rem;
+    --breakpoint-3xl: 1710px;
 }
 
 :root {
     --color-link-500: #7592dc;
-
-
-  --color-primary-50: #1d9fb7;
-  --color-primary-100: #06434f;
-  --color-primary-200: #9be7f5;
-  --color-primary-300: #73ddf1;
-  --color-primary-400: #4cd4ed;
-  --color-primary-500: #7592dc;
-  --color-primary-600: #7592dc;
-  --color-primary-700: #157486;
-  --color-primary-800: #0d4954;
-  --color-primary-900: #061e23;
+    --color-primary-50: #1d9fb7;
+    --color-primary-100: #06434f;
+    --color-primary-200: #9be7f5;
+    --color-primary-300: #73ddf1;
+    --color-primary-400: #4cd4ed;
+    --color-primary-500: #7592dc;
+    --color-primary-600: #7592dc;
+    --color-primary-700: #157486;
+    --color-primary-800: #0d4954;
+    --color-primary-900: #061e23;
 }
